0.0.89 Overflow fix, code cleanup

--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -7,7 +7,8 @@
 @font-face {
   font-family: 'abel';
   src: url(../../fonts/Abel-Regular.ttf) format("truetype"); }
-body {
+html, body {
+  width: 100%;
   overflow-x: hidden; }
 
 a {
