--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -24,7 +24,9 @@ $tertiary-light-grey: #D8DBE2;
     font-family: 'abel';
     src:url(../../fonts/Abel-Regular.ttf) format('truetype');
 }
-body {
+
+html, body {
+    width: 100%;
     overflow-x: hidden;
 }
 // Removing link outlines
